# jiarray

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_0.7.1.md  jiarray.code-workspace  jiarray.vcxproj
docs/: manual.md
include/jiarray/: FastArray.h  HighFiveExtension.hpp  JIArray.h  JICudaArray.h  JIVector.h  pch.h
src/: FastArray.h  HighFiveExtension.hpp  JIArray.h  JICudaArray.h  JIVector.h  MyArray.h  pch.h
test/: column_major_iter_test.cpp  column_major_test.cpp  fast_array_test.cpp  ffor_test.cpp  iter_test.cpp  jiarray_coverage_test.cpp  jivector_test.cpp  main.cpp  move_lifecycle_test.cpp  range_test.cpp  row_major_iter_test.cpp  row_major_test.cpp  simple_test.cpp  slice_test.cpp
